fix thumbnail overlapping image

--- a/css/games.css
+++ b/css/games.css
@@ -24,6 +24,11 @@ body {
   margin: 0;
 }
 
+.game-image-viewer {
+	display: flex;
+	flex-direction: column;
+}
+
 .game-card {
   box-sizing: border-box;
   display: inline-block;
@@ -100,30 +105,45 @@ body {
 }
 
 .modal-centered {
-      position: absolute;
-      margin-left: 2vw;
-      top: 50%;
-      width: 96vw;
-      max-height: 100vh;
-      transform: translateY(-50%);
+  position: absolute;
+  margin-left: 2vw;
+  top: 50%;
+  width: 96vw;
+  max-height: 100vh;
+  transform: translateY(-50%);
 }
 
 .thumbs {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      padding: 0;
-      box-sizing: border-box;
+  width: 100%;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .scrollable {
   box-sizing: border-box;
   max-height: 96vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 1em;
 }
 
+/* wide version */
+@media screen and (min-aspect-ratio: 7/3) {
+	.thumbs {
+	  overflow-y: auto;
+	  max-height: 100%;
+	  flex-basis: 50%;
+	}
+	.game-image-viewer .game-card {
+	  display: block;
+	  width: 100%;
+	}
+	.game-image-viewer {
+	  flex-direction: row-reverse;
+	  max-height: 100vh;
+	}
+}
+
+/* thin version */
 @media screen and (max-width: 800px) {
   .game-columns {
     grid-template-columns: auto;
@@ -142,6 +162,7 @@ body {
   }
 }
 
+/* mobile version */
 @media screen and (max-width: 500px) {
   .game-card {
     width: 50%;
